Converted all pt values to em in desktop/index

--- a/molly/apps/desktop/templates/desktop/index.html
+++ b/molly/apps/desktop/templates/desktop/index.html
@@ -79,7 +79,7 @@ img.logo {
 p.strap-line {
 	margin: -5px 0 0 25px;
 	color: #fff;
-	font-size: 12pt;
+	font-size: 1em;
 	font-weight: bold;
 }
 
@@ -139,7 +139,7 @@ div#features div#feature-margin h2 {
 
 div.accessing {
 	text-align: center;
-	font-size: 12pt;
+	font-size: 1em;
 	color: #555; 
 	border: 2px solid #eee;
 	padding: 8px 15px;
@@ -164,7 +164,7 @@ div#discover {
 }
 
 span.domain-link {
-	font-size: 20pt;
+	font-size: 1.7em;
 }
 
 ul.feature-link-list {
