converted font-size to em

--- a/molly/apps/service_status/static/service_status/css/smart.css
+++ b/molly/apps/service_status/static/service_status/css/smart.css
@@ -14,6 +14,6 @@ ul.service-status-list li.service-status-partial { background-image:url('../../s
 ul.service-status-list li.service-status-unknown { background-image:url('../../service_status/images/service-unknown.png'); background-color: #101b28;}
 ul.service-status-list li.service-status-down { background-image:url('../../service_status/images/service-down.png'); background-color: #281010;}
 
-span.service-status-status, span.service-status-detail { font-size:90%; }
+span.service-status-status, span.service-status-detail { font-size:0.9em; }
 span.service-status-detail { font-style:italic; }
 /* End OUCS Status */
