--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -19,7 +19,7 @@
 <div class="section">
     <h2>{{ item.title }}</h2>
     
-    <div class="article"><div class="bubble pad-5" style="margin: 2px;">
+    <div class="article"><div class="bubble pad-5">
         {{ description|safe }}
         <br />
         
