--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -43,7 +43,7 @@
 
 {% endfor %}
 
-<div style="text-align:center">
+<div class="center">
   <input type="submit" value='{% trans "Delete selected" %}'/>
 </div>
 
