--- a/molly/apps/sakai/templates/sakai/evaluation/detail.html
+++ b/molly/apps/sakai/templates/sakai/evaluation/detail.html
@@ -18,7 +18,7 @@
   {% csrf_token %}
 {{ questions|safe }}
 
-<p style="text-align:center">
+<p class="center">
 {{ submitButton|safe }}
 </p>
 </form>
