--- a/molly/auth/templates/auth/clear_session.html
+++ b/molly/auth/templates/auth/clear_session.html
@@ -12,7 +12,7 @@
     <p>{% trans "If you are signed into any external services, you may wish to close your browser." %}</p>
   </div>
   <div class="section-content">
-    <p style="text-align:center">
+    <p class="center">
       <input type="submit" value="{% trans "Clear session" %}"/>
     </p>
   </div>
