--- a/molly/auth/templates/auth/index.html
+++ b/molly/auth/templates/auth/index.html
@@ -129,7 +129,7 @@
 
 {% endif %}
 
-<p style="text-align:center">
+<p class="center">
   <input type="submit" value="{% trans "Submit" %}"/>
 </p>
 </form>
