--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -19,7 +19,7 @@
 {% for podcast in podcasts %}
     <li style="padding:5px; clear:left; background:none;">
       <a href="{{ podcast.get_absolute_url }}" style="">
-        <div style="float:left; width:60px; margin-right:5px; text-align:center;">
+        <div class="center" style="float:left; width:60px; margin-right:5px;">
           {% if podcast.logo %}
           {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
           <img src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" style="border:0;"/>
