--- a/molly/favourites/templates/favourites/index.html
+++ b/molly/favourites/templates/favourites/index.html
@@ -24,7 +24,7 @@
         </tr>
         {% empty %}
         <tr>
-          <td colspan="2" style="text-align:center;"><em>{% trans "You haven't favourited anything yet!" %}</em></td>
+          <td colspan="2" class="center"><em>{% trans "You haven't favourited anything yet!" %}</em></td>
         </tr>
         {% endfor %}
       </tbody>
