Last lot of i18n cleanups

--- a/molly/apps/sakai/templates/sakai/signup/index.html
+++ b/molly/apps/sakai/templates/sakai/signup/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="section">
     <div class="header">
-    <h2>Sign-up events by Weblearn site</h2>
-    <p>We're still working on a way of only showing you sites that you have tutorials available to book; bear with us in the meantime!</p>
+    <h2>{% trans "Sign-up events by WebLearn site" %}</h2>
+    <p>{% trans "We're still working on a way of only showing you sites that you have tutorials available to book; bear with us in the meantime!" %}</p>
     </div>
 <ul class="link-list">
 {% for id, title in sites %}
