Forgot to add i18n line to that file

--- a/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/apps/sakai/templates/sakai/signup/list.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load molly_utils %}
+{% extends "sakai/base.html" %}{% load molly_utils %}{% load i18n %}
 
 {% block pagetitle %}{% trans "Meetings" %}{% endblock %}
 
