--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -18,7 +18,7 @@
 	    <img src="{{ STATIC_URL }}weather/images/{{ observation.icon }}.png" alt="{{ observation.get_outlook_display|capfirst }}"/><br/>
 	</div>
 	<div class="weather-live-info">
-	    <span style="font-size: 36pt;">
+	    <span>
 		{% blocktrans with observation.temperature as temperature %} {{ temperature }}&deg;C{% endblocktrans %}</span><br/>
 		{% blocktrans with observation.wind_speed as wind_speed and observation.wind_direction as wind_direction %}{{ wind_speed }}mph {{ wind_direction }}{% endblocktrans %}<br/>
 		{% blocktrans with observation.humidity as humidity %}{{ humidity }}% Relative Humidity{% endblocktrans %}<br/>
@@ -36,9 +36,9 @@
         <tbody>
 	    {% for forecast in forecasts %}
             <tr>
-                <td style="font-size:12pt">{{ forecast.observed_date|date:"l" }}</td>
-                <td><img src="{{ STATIC_URL }}weather/images/{{ forecast.icon }}_small.png" alt="{{ forecast.get_outlook_display|capfirst }}" style="height:2.5em; width:2.5em;"/></td>
-                <td style="font-size:12pt">{% blocktrans with forecast.max_temperature as temperature %}{{ temperature }}&deg;C{% endblocktrans %}</td>
+                <td class="large-text">{{ forecast.observed_date|date:"l" }}</td>
+                <td><img src="{{ STATIC_URL }}weather/images/{{ forecast.icon }}_small.png" alt="{{ forecast.get_outlook_display|capfirst }}"/></td>
+                <td class="large-text">{% blocktrans with forecast.max_temperature as temperature %}{{ temperature }}&deg;C{% endblocktrans %}</td>
                 <td>{% blocktrans with forecast.min_temperature as temperature %}{{ temperature }}&deg;C{% endblocktrans %}</td>
             </tr>
 	    {% endfor %}
