Removed some more inline CSS

--- a/molly/apps/places/templates/places/update_osm_done.html
+++ b/molly/apps/places/templates/places/update_osm_done.html
@@ -9,7 +9,7 @@
 <div class="section-nopad">
   <h2>{% trans "Thank you" %}</h2>
   
-  <div class="section-content" style="text-align:left;">
+  <div class="section-content">
     <p>
 	{% blocktrans %}Your changes have been submitted and will be checked shortly. Thank you for contributing to both {{ site_name }} and OpenStreetMap!{% endblocktrans %}
     </p>
