--- a/molly/apps/podcasts/static/podcasts/css/smart.css
+++ b/molly/apps/podcasts/static/podcasts/css/smart.css
@@ -13,3 +13,8 @@ img.podcasts-icon {
   -webkit-box-shadow:1px 1px 2px #222;
 }
  
+ul.link-list li.podcast {
+    padding: 5px;
+    clear: left;
+    background: none;
+}
