Removed more inline CSS, added inherit-color, no-border classes to smart.css

--- a/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -70,7 +70,7 @@
       <input type="submit" value='{% trans "Submit" %}'/>
     </p>
     
-    <div style="clear:both"></div>
+    <div class="clear"></div>
   </form>
 </div>
 
