--- a/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -20,7 +20,7 @@
  <div class="section-content no-round-bottom">
   <div class="pad-5">
    <table class="real-time-information">
-    <thead style="display:none;">
+    <thead class="invisible">
         <tr>
             <th>{% trans "Service" %}</th>
             <th>{% trans "Destination" %}</th>
