--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -38,7 +38,7 @@
     <div style="font-size:1em; line-height:1.1em;">
     {{ podcast.description|safe }}
     </div>
-    <div style="clear:both;"> </div>
+    <div class="clear"> </div>
   </div>
 <ul class="content-list">
 {% for item in items %}
