--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -200,7 +200,7 @@
 				{# This is always in English as it's a lingua franca #}
 				    <div><a href="{% url set-language %}">Change language</a></div>
 				{% endif %}
-			 	<div style="clear:both"> </div>
+			 	<div class="clear"> </div>
 			{# Give a simple list for feature phones #}
 			{% else %}
 				<ul>
