--- a/molly/templates/i18n/language_selector.html
+++ b/molly/templates/i18n/language_selector.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 {% if LANGUAGES|length > 1 %}
-    <div class="section" style="clear:both;">
+    <div class="section clear">
 	<div class="header">
 	    <h2>{% trans "Change Language" %}</h2>
 	</div>
