--- a/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
+++ b/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
@@ -67,7 +67,7 @@
       <input type="submit" value="{% trans 'Submit' %}"/>
     </p>
 
-    <div style="clear:both"></div>
+    <div class="clear"></div>
   </form>
 </div>
 
