--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -42,7 +42,7 @@
         {% for service in train_station.metadata.ldb.trainServices.service %}
           <tr>
             <td>
-              <a href="{{ train_station.get_absolute_url }}service?id={{ service.serviceID|urlencode }}" style="color: inherit;" rel="nofollow">
+              <a href="{{ train_station.get_absolute_url }}service?id={{ service.serviceID|urlencode }}" class="inherit-color" rel="nofollow">
                 {# This isn't that straight-forward - trains can split and go to multiple destinations #}
                 {% ifequal board "arrivals" %}
                   {% for location in service.origin.location %}
