--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -18,21 +18,21 @@
 <ul class="link-list">
 {% for podcast in podcasts %}
     <li class="podcast">
-      <a href="{{ podcast.get_absolute_url }}" style="">
+      <a href="{{ podcast.get_absolute_url }}">
         <div class="center" style="float:left; width:60px; margin-right:5px;">
           {% if podcast.logo %}
           {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
-          <img src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" style="border:0;"/>
+          <img class="no-border" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" class="no-border"/>
           {% endwith %}
           {% endif %}
-          <img src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" style="border:0; margin:2px;" alt="({{ podcast.medium }})">
+          <img src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" class="no-border" style="margin:2px;" alt="({{ podcast.medium }})">
         </div>
         <div style="padding:0 0 0 60px">
         {{ podcast.title }}
         <br />
         <span style="font-size:80%; padding-left:0;">{{ podcast.description|truncatewords:10 }}</span>
         </div>
-        <br style="clear:both;"/>
+        <br class="clear"/>
       </a>
     </li>
 {% empty %}
