Converted % values to em values. May need tweaking due to relative sizing

--- a/molly/apps/sakai/templates/sakai/poll/detail.html
+++ b/molly/apps/sakai/templates/sakai/poll/detail.html
@@ -72,7 +72,7 @@
     <tbody>
         {% for option in options %}
             <tr>
-                <td class="center" style="font-size:200%; width:35px">
+                <td class="center" style="font-size:2em; width:35px">
                     {% if poll.mayVote %}
                     <label style="display:block; padding:10px; margin:8px; -moz-border-radius:8px; border:1px solid #888; width:1.1em; line-height:1.1em; vertical-align:middle">
                         <input
