--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -30,7 +30,7 @@
         <div style="padding:0 0 0 60px">
         {{ podcast.title }}
         <br />
-        <span style="font-size:80%; padding-left:0;">{{ podcast.description|truncatewords:10 }}</span>
+        <span style="font-size:0.8em; padding-left:0;">{{ podcast.description|truncatewords:10 }}</span>
         </div>
         <br class="clear"/>
       </a>
