Added #itunesu_link_div to podcasts/smart.css and removed inline css in index.html

--- a/molly/apps/podcasts/static/podcasts/css/smart.css
+++ b/molly/apps/podcasts/static/podcasts/css/smart.css
@@ -18,3 +18,7 @@ ul.link-list li.podcast {
     clear: left;
     background: none;
 }
+
+#itunesu_link_div p.itunesu_buttons {
+    margin-bottom: 0;
+}
