--- a/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/apps/podcasts/templates/podcasts/index.html
@@ -15,7 +15,7 @@
        Remember this preference in future.
        </label>
     </p>{% endcomment %}
-    <p class="center" style="margin-bottom:0;">
+    <p class="center itunesu_buttons">
         <button type="submit" name="use_itunesu" value="yes">{% trans "Go to iTunes U" %}</button>
         <button type="submit" name="cancel" id="hide_itunesu_link" value="no">{% trans "Stay here" %}</button>
     </p>
