--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -19,18 +19,18 @@
 {% for podcast in podcasts %}
     <li class="podcast">
       <a href="{{ podcast.get_absolute_url }}">
-        <div class="center" style="float:left; width:60px; margin-right:5px;">
+        <div class="center podcast-image">
           {% if podcast.logo %}
           {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
-          <img class="no-border" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" class="no-border"/>
+          <img class="no-border" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" />
           {% endwith %}
           {% endif %}
-          <img src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" class="no-border" style="margin:2px;" alt="({{ podcast.medium }})">
+          <img class="no-border" src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" alt="({{ podcast.medium }})">
         </div>
-        <div style="padding:0 0 0 60px">
+        <div class="podcast-title">
         {{ podcast.title }}
         <br />
-        <span style="font-size:0.8em; padding-left:0;">{{ podcast.description|truncatewords:10 }}</span>
+        <span class="podcast-description">{{ podcast.description|truncatewords:10 }}</span>
         </div>
         <br class="clear"/>
       </a>
